# smart_agriculture

./: .gitignore  README.md
back/: CMakeLists.txt  main.cpp  vcpkg.json
back/include/: cors.hpp  real_time_data.hpp
back/src/: main.cpp
front/: index.html  package-lock.json  package.json
front/src/: App.vue  main.ts
front/src/components/: device_info.vue  device_list.vue
front/src/stores/: now_device_info.ts
qrs/strawberry/: strawberry.ino
